# Kensho

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: download_qwen.sh
src/: character.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/actor/: mod.rs  sentence_buffer.rs  stream_filter.rs
src-tauri/src/core/: config.rs  error.rs  logging.rs  mod.rs
src-tauri/src/domain/: chat.rs  delegation.rs  event.rs  ids.rs  knowledge.rs  mind_map.rs  mod.rs  task.rs  user.rs
src-tauri/src/infrastructure/: mcp_server.rs  mod.rs
src-tauri/src/infrastructure/audio/: mod.rs
src-tauri/src/infrastructure/database/: migrations.rs  mod.rs
src-tauri/src/infrastructure/llm/: engine.rs  llama.rs  mock.rs  mod.rs
src-tauri/src/infrastructure/os_signals/: mod.rs
src-tauri/src/services/: approval.rs  assistant.rs  clipboard.rs  conversation.rs  mcp_bridge.rs  mod.rs  tools.rs
src-tauri/src/tauri_commands/: mod.rs
