[package]
name = "kensho"
version = "0.1.0"
description = "Kensho - autonomous local-AI desktop companion for Ubuntu"
authors = ["Felipe Jovino"]
edition = "2021"
rust-version = "1.77"

# Tauri requires the app logic to live in a lib so the binary + (future) mobile
# targets share the same `run()` entrypoint.
[lib]
name = "kensho_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- Tauri core ---
tauri = { version = "2", features = [] }

# --- Serialization (end to end) ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Async runtime ---
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# --- Persistence: embedded SQLite, statically bundled (no system dependency) ---
rusqlite = { version = "0.32", features = ["bundled"] }

# --- Error handling ---
thiserror = "1"
anyhow = "1"

# --- Native Ubuntu notifications via D-Bus ---
notify-rust = "4"

# --- Structured logging ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- Misc domain primitives ---
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# --- Local GGUF inference backend (HEAVY: builds llama.cpp via C++). ---
# Off by default so `cargo build` stays clean & fast. Enable with:
#   cargo build --features llama
# The architecture talks only to the `InferenceEngine` trait, so swapping the
# MockEngine for this real backend requires no changes outside `infrastructure/llm`.
llama-cpp-2 = { version = "0.1", optional = true }

[features]
default = []
llama = ["dep:llama-cpp-2"]

[profile.release]
# Smaller, faster binary for a long-running desktop companion.
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
